' @autogenerated
@startuml
left to right direction
title Clases para user accepted termns of use
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
emailVerified:boolean
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
verifyEmail()
}
class access.TenantTermsOfUse{
uid:string
text:blob
enabled:boolean
attached:binary
activationDate:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.UserAcceptedTermnsOfUse{
uid:string
acceptDate:datetime
ipAddress:string
userAgent:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.UserAcceptedTermnsOfUse: user
access.TenantTermsOfUse "1"  o--  "N*" access.UserAcceptedTermnsOfUse: conditions

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
